# algorithm

./: .gitignore
Algorithm/: 8queens.cpp  binary_search.cpp  binary_search.py  common.cpp  dijkstra_floyd.py  index.md  knapsack_problem.py  knapsack_problem_0.cpp  knapsack_problem_1.cpp  mul.cpp  print_.cpp  towers_of_Hanoi.cpp  towers_of_Hanoi.py  working.cpp
Algorithm/dfs/: 1.py
Algorithm/dfs_bfs/: 2.py  ColorDFS.cpp  MazeDFS.cpp
Algorithm/sort/: bubble_sort.cpp
Algorithm/tsp/: tmp.cpp  tmp.txt
DataStructure/: trie.py
Homework/: chapter3.cpp  chapter4.cpp  chapter4.py  lcs.py  tempCodeRunnerFile.py  test.py  tmp.cpp  tmp1.cpp  tmp2.txt  utils.py
Homework/PL0/: src.pl0  tmp0.c  tmp1.c  tmp2.cpp
Homework/TakeBus/: .gitignore  CMakeLists.txt  data.cpp  data.h  main.cpp  map.cpp  map.h  model.h
Homework/TakeBus/data/: buses.txt  routes.txt
Homework/TakeBus/include/: map.h  menu.h  model.h  search.h
Homework/TakeBus/source/: main.cpp  map.cpp  menu.cpp  search.cpp
Homework/take_bus/: edges.json  routes.json  run.py  stations.json
LeetCode/: 1.cpp
